SNS 로그인 TODO 주석처리

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,15 +26,15 @@ spring.servlet.multipart.location=C:\\iclass0419\\upload
 server.error.include-exception=true
 server.error.include-stacktrace=ALWAYS
 server.error.whitelabel.enabled=false
-# kakao login
+# kakao login TODO 12.16 ??? ? ????
 kakao.client.id=7ce191ea09b6b4d1c1aab13d137d8a4e
 kakao.client.secret=6WaKmsPn9LgS3Pa0XXuRAzXO1PTl3mQH
 kakao.redirect.url=http://localhost:8086/kakao/callback
-# naver login
+# naver login TODO 12.16 ??? ? ????
 naver.client.id=eT4X7SwbVmc3l8LRcrps
 naver.client.secret=Gh3WKmxiij
 naver.redirect.url=http://localhost:8086/naver/callback
-# google login
+# google login TODO 12.16 ??? ? ????
 google.client.id=384518553760-170g64pjn4lpmarorlpvbp0pvnqoich7.apps.googleusercontent.com
 google.client.secret=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
 google.redirect.url=http://localhost:8086/google/callback
