--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,9 @@
-#Database
+# Database
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.datasource.username=BIPARK
 spring.datasource.password=1234
-spring.datasource.url=jdbc:oracle:thin:@sion.autocrypt.me:1521:XE
-# Hibernate ??
-spring.jpa.properties.hibernate.jdbc.time_zone=UTC
-spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
+spring.datasource.url=jdbc:oracle:thin:@sion.autocrypt.me:1521:XE?serverTimezone=UTC
+#spring.datasource.url=jdbc:oracle:thin:@sion.autocrypt.me:1521:XE
 #Server port
 server.port=8086
 #
