--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 # Database
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
-spring.datasource.username=BIPARK
-spring.datasource.password=1234
-spring.datasource.url=jdbc:oracle:thin:@sion.autocrypt.me:1521:XE?serverTimezone=UTC
+spring.datasource.username=TeamPlus
+spring.datasource.password=0419
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:XE
+#spring.datasource.url=jdbc:oracle:thin:@sion.autocrypt.me:1521:XE?serverTimezone=UTC
 #spring.datasource.url=jdbc:oracle:thin:@sion.autocrypt.me:1521:XE
 #Server port
 server.port=8086
