--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Database
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
-spring.datasource.username=TeamPlus
+spring.datasource.username=teamplus
 spring.datasource.password=0419
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:XE?serverTimezone=UTC
 #spring.datasource.url=jdbc:oracle:thin:@sion.autocrypt.me:1521:XE?serverTimezone=UTC
