--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.username=teamplus
 spring.datasource.password=0419
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:XE?serverTimezone=UTC
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:XE
 #spring.datasource.url=jdbc:oracle:thin:@sion.autocrypt.me:1521:XE?serverTimezone=UTC
 #spring.datasource.url=jdbc:oracle:thin:@sion.autocrypt.me:1521:XE
 #Server port
