--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Database
-spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.datasource.username=teamplus
 spring.datasource.password=0419
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:XE
