--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Database
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
-spring.datasource.username=teamplus
-spring.datasource.password=0419
+spring.datasource.username=system
+spring.datasource.password=1234
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:XE?serverTimezone=Asia/Seoul
 #spring.datasource.url=jdbc:oracle:thin:@sion.autocrypt.me:1521:XE?serverTimezone=UTC
 #spring.datasource.url=jdbc:oracle:thin:@sion.autocrypt.me:1521:XE
