--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,8 @@
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.datasource.username=system
 spring.datasource.password=1234
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:XE?serverTimezone=Asia/Seoul
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:XE
+spring.main.timezone=Asia/Seoul
 #spring.datasource.url=jdbc:oracle:thin:@sion.autocrypt.me:1521:XE?serverTimezone=UTC
 #spring.datasource.url=jdbc:oracle:thin:@sion.autocrypt.me:1521:XE
 #Server port
