--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,8 @@ spring.datasource.username=system
 spring.datasource.password=1234
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:XE
 spring.main.timezone=Asia/Seoul
+# Hibernate ??
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
 #spring.datasource.url=jdbc:oracle:thin:@sion.autocrypt.me:1521:XE?serverTimezone=UTC
 #spring.datasource.url=jdbc:oracle:thin:@sion.autocrypt.me:1521:XE
 #Server port
